# observe-rs

./: .gitignore  Cargo.toml  README.md  ReadMe.md  binary_size_analysis.sh  example_input.yaml  learning_notes.md  release-plz.toml
.github/workflows/: build-and-test.yaml  build-and-test.yml  ci.yml  release.yaml
docs/: CHANGELOG.md
examples/: deserialize-from-config.rs  standalone-prometheus.rs
src/: lib.rs  main.rs
src/backends/: mock.rs  mod.rs  prometheus.rs
src/backends/prometheus/: prometheus_backend.rs
src/core/: metrics.rs  mod.rs  registry.rs  renderer.rs
src/http/: health.rs  mod.rs  standalone.rs
src/http_server/: http_server.rs
src/prometheus_metric_generator/: mod.rs  prometheus_metric_generator.rs  prometheus_metrics_handler.rs
tests/: assertions.rs  http_test.rs  metrics_test.rs
