[package]
name = "observe-rs"
authors = ["Joel Earps"]
version = "0.1.0"
edition = "2021"
description = "A flexible, multi-backend observability library for Rust"
license = "MIT"
repository = "https://github.com/JoelEarps/observe-rs"
readme = "README.md"
keywords = ["prometheus", "metrics", "observability", "opentelemetry", "monitoring"]
categories = ["development-tools::profiling", "web-programming"]

# Features are additive: users can use default-features = false and pick only what they need.
# CI and publish verify all feature combinations (including "full").
[features]
default = ["prometheus", "standalone"]

# ══════════════════════════════════════════════════════════════
# METRIC BACKENDS
# ══════════════════════════════════════════════════════════════
prometheus = ["dep:prometheus-client"]
otlp = ["dep:opentelemetry", "dep:opentelemetry-otlp"]
# statsd = ["dep:cadence"]  # Future
# datadog = ["dep:dogstatsd"]  # Future

# ══════════════════════════════════════════════════════════════
# HTTP SERVER MODES
# ══════════════════════════════════════════════════════════════
# Standalone: Launches its own HTTP server (for embedded/sidecar use)
standalone = ["dep:axum", "dep:tokio", "dep:hyper"]

# Middleware integrations: Plug into existing frameworks
axum-integration = ["dep:axum"]
# actix-integration = ["dep:actix-web"]  # Future
# warp-integration = ["dep:warp"]  # Future

# Generic tower layer (works with any tower-compatible server)
# tower-layer = ["dep:tower"]  # Future

# ══════════════════════════════════════════════════════════════
# TESTING & DEVELOPMENT
# ══════════════════════════════════════════════════════════════
mock = []                           # In-memory mock backend for testing
test-utils = ["mock"]               # Test helpers and assertions
fake-data = ["mock", "dep:rand"]    # Generate realistic fake metric data

# ══════════════════════════════════════════════════════════════
# CONFIG FORMATS
# ══════════════════════════════════════════════════════════════
json-config = ["dep:serde", "dep:serde_json"]
yaml-config = ["dep:serde", "dep:serde_yaml"]

# ══════════════════════════════════════════════════════════════
# FULL BUNDLES
# ══════════════════════════════════════════════════════════════
full = ["prometheus", "otlp", "standalone", "json-config", "yaml-config", "mock"]
minimal = ["prometheus"]  # Smallest possible footprint

[dependencies]
# Core (always included)
thiserror = "2.0.18"

# Backends (optional)
prometheus-client = { version = "0.24.0", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", optional = true }
# cadence = { version = "1.0", optional = true }
# dogstatsd = { version = "0.11", optional = true }

# HTTP (optional)
axum = { version = "0.8.8", optional = true }
hyper = { version = "1.4.1", optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
# actix-web = { version = "4.0", optional = true }
# warp = { version = "0.3", optional = true }
# tower = { version = "0.4", optional = true }

# Config (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
serde_yaml = { version = "0.9.34-deprecated", optional = true }

# Testing (optional)
rand = { version = "0.9.2", optional = true }

[dev-dependencies]
tokio-test = "0.4.5"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
reqwest = { version = "0.13.1", features = ["json"] }
